# mermaid-timeline

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/fixtures/: 0075_6858665E.CYCLE.h  0100_685864F3.MER
data/fixtures/452.020-P-06/: README.md
data/fixtures/452.020-P-06/cycle/: 0000_5B33E271.CYCLE  0001_5B33E271.CYCLE  0002_5B3534E9.CYCLE  0003_5B3F1974.CYCLE  0004_5B4748EA.CYCLE  0005_5B4C1DC5.CYCLE  0006_5B501430.CYCLE  0007_5B57CB2F.CYCLE  0008_5B62EA57.CYCLE  0009_5B673466.CYCLE  0010_5B6A98EE.CYCLE  0011_5B6DF03F.CYCLE  0012_5B73EABC.CYCLE  0013_5B773BFF.CYCLE  0014_5B7A536B.CYCLE  0015_5B7DC7FB.CYCLE  0016_5B82A5F9.CYCLE  0017_5B863216.CYCLE  0018_5B893311.CYCLE  0019_5B8C313F.CYCLE  0020_5B8F438E.CYCLE  0021_5B9259E9.CYCLE  0022_5B956878.CYCLE  0023_5B9866A4.CYCLE  0024_5B9DE11B.CYCLE  0025_5BA141FE.CYCLE  0026_5BA4B7B8.CYCLE  0027_5BA8410D.CYCLE  0028_5BADAB4F.CYCLE  0029_5BB0F78C.CYCLE  0030_5BB630E6.CYCLE  0031_5BBA9530.CYCLE  0032_5BBEB790.CYCLE  0033_5BC224DE.CYCLE  0034_5BC57F26.CYCLE  0035_5BCC2298.CYCLE  0036_5BD25B2B.CYCLE  (+364 more)
data/fixtures/mer_examples_representative_06_0100/: README.md
docs/: cli.md  ethos.md  implementation_prompt.md  limitations.md  schema.md
docs/notes/: normalization_design_status.md  normalization_release_contract.md  pre_v1_checklist.md
scripts/: audit_bin2cycle_corpus.py  audit_normalize_cli_matrix.py  generate_log_jsonl_prototype.py  generate_mer_jsonl_prototype.py  materialize_bin_logs.py  profile_bin2log_fixture.py  profile_normalization_pipeline.py  validate_bin2cycle.py
src/mermaid_records/: __init__.py  _audit_normalize_cli.py  audit_normalize_cli.py  bin2log.py  cli.py  manifest.py  mer_raw.py  models.py  normalize_log.py  normalize_mer.py  normalize_pipeline.py  parse_float_name.py  parse_instrument_name.py
src/mermaid_timeline/: __init__.py  _time.py  acq_windows.py  audit.py  bin2cycle.py  bin2log.py  buffer.py  cli.py  cycle_raw.py  det_coverage.py  detreq.py  diagnostics.py  discovery.py  interval_reader.py  io_summary.py  ledger.py  mer_raw.py  models.py  operational_jsonl.py  operational_raw.py  pipeline.py  plotting.py  records.py  req_coverage.py  schema.py  timeline_status.py
tests/: test_acq_windows.py  test_acquisition.py  test_audit.py  test_audit_normalize_cli.py  test_bin2cycle.py  test_bin2log.py  test_buffer.py  test_cli.py  test_cycle_raw.py  test_det_coverage.py  test_detreq.py  test_discovery.py  test_discovery_semantic.py  test_manifest.py  test_mer_raw.py  test_models.py  test_normalize_log.py  test_normalize_mer.py  test_operational_jsonl.py  test_operational_raw.py  test_parse_float_name.py  test_parse_instrument_name.py  test_parse_log.py  test_parse_mer.py  test_records.py  test_release_readiness.py  test_req_coverage.py  test_timeline_status.py
(+418 files in other folders)
