# Bathymetrix™
# https://bathymetrix.com
# © 2026 Bathymetrix, LLC
# Author: Joel D. Simon <jdsimon@bathymetrix.com>
# Licensed under the MIT License

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mermaid-timeline"
version = "0.1.0"
description = "Scaffold for parsing and summarizing MERMAID timeline data."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI Codex" }]
license = { text = "Proprietary" }
keywords = ["mermaid", "timeline", "parsing", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
mermaid-timeline = "mermaid_timeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
