[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mermaid-timeline"
dynamic = ["version"]
description = "Interval-level timeline synthesis for normalized MERMAID records."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "MERMAID tooling contributors" },
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
]
plot = [
  "plotly>=5",
]

[project.scripts]
mermaid-timeline = "mermaid_timeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "mermaid_timeline.__version__" }
